# atomic-ocean-waves

./: .gitignore  README.md  environment.yml  pyproject.toml
data/: README.md
data_input/: README.md
data_processed/: README.md
notebooks/: 00-data_processing.ipynb  00_data_exploration.ipynb  01_data_exploration.ipynb
src/atomic_ocean_waves/: clean_data.py  mission_specifications.py  plotting.py  read_data.py  swift.py  waves.py  wsra.py  xarray_helpers.py
