[project]
name = "atomic-ocean-waves"
version = "v2026.03.0"
description = "Analysis of ocean surface wave data collected during the Atlantic Tradewind Ocean–Atmosphere Mesoscale Interaction Campaign (ATOMIC)."
authors = [
    {name = "Jake Davis", email = "jacob.davis@whoi.edu"}
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.13"
dependencies = []  # handled by environment.yml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"